k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon
  labels:
    app: amazon-app
    environment: production
    team: devops
